fixed spacing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -75,7 +75,6 @@ body {
     box-shadow: 2px 2px 4px 0 #ccc;
     box-sizing: border-box;
     display: inline-block;
-    margin: 0 0 1.5em;
     width: 100%;
   }
 }
